[ring] Further code improvements and enhancements (#18778)
Signed-off-by: Jan N. Klug <github@klug.nrw>